syntax="proto3";

// menu messages
message CreateOrUpdateMenuReq {
  uint32 level = 1;
  uint64 parent_id = 2;
  string path = 3;
  string name = 4;
  string redirect = 5;
  string component = 6;
  uint32 order_no = 7;
  bool disabled = 8;
  Meta meta = 9;
  uint64 id = 10;
  uint32 menu_type = 11;
}

message MenuInfo {
  uint64 id = 1;
  int64 created_at = 2;
  int64 updated_at = 3;
  uint32 level = 4;
  uint64 parent_id = 5;
  string path = 6;
  string name = 7;
  string redirect = 8;
  string component = 9;
  uint32 order_no = 10;
  bool disabled = 11;
  Meta meta = 12;
  repeated MenuInfo children = 13;
  uint32 menu_type = 14;
}

message Meta {
  string title = 1;
  string icon = 2;
  bool hide_menu = 3;
  bool hide_breadcrumb = 4;
  string current_active_menu = 5;
  bool ignore_keep_alive = 6;
  bool hide_tab = 7;
  string frame_src = 8;
  bool carry_param = 9;
  bool hide_children_in_menu = 10;
  bool affix = 11;
  uint32 dynamic_level = 12;
  string real_path = 13;
}

message MenuInfoList {
  uint64 total = 1;
  repeated MenuInfo data = 2;
}

message MenuRoleInfo {
  uint64 id = 1;
  uint64 menu_id = 2;
  uint64 role_id = 3;
}

message MenuRoleListResp {
  uint64 total = 1;
  repeated MenuRoleInfo data = 2;
}

message CreateOrUpdateMenuParamReq {
  uint64 id = 1;
  uint64 menu_id = 2;
  string type = 3;
  string key = 4;
  string value = 5;
}

message MenuParamResp {
  uint64 id = 1;
  string type = 3;
  string key = 4;
  string value = 5;
  int64 created_at = 6;
  int64 updated_at = 7;
}

message MenuParamListResp {
  uint64 total = 1;
  repeated MenuParamResp data = 2;
}

service core {
  //menu management

  // group: menu
  rpc createOrUpdateMenu (CreateOrUpdateMenuReq) returns (BaseResp);
  // group: menu
  rpc deleteMenu (IDReq) returns (BaseResp);
  // group: menu
  rpc getMenuListByRole (IDReq) returns (MenuInfoList);
  // group: menu
  rpc getMenuList (PageInfoReq) returns (MenuInfoList);
  // group: menu
  rpc createOrUpdateMenuParam (CreateOrUpdateMenuParamReq) returns (BaseResp);
  // group: menu
  rpc deleteMenuParam (IDReq) returns (BaseResp);
  // group: menu
  rpc getMenuParamListByMenuId (IDReq) returns (MenuParamListResp);
}